[package]
name = "parse_range_headers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
with_error_cause = []

[dependencies]

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
regex = "1.5.4"
