[package]
name = "http-range-header"
version = "0.4.1"
edition = "2018"
license = "MIT"
readme = "./README.md"
description = "No-dep range header parser"
repository = "https://github.com/MarcusGrass/parse-range-headers"
homepage = "https://github.com/MarcusGrass/parse-range-headers"
categories = ["parser-implementations", "network-programming", "web-programming"]
keywords = ["http", "parser", "http-headers", "headers", "range"]
exclude = ["/.github", "CONTRIBUTING.md"]

[package.metadata]
msrv = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
regex = "1.8.3"

[[bench]]
name = "benchmark"
harness = false
